crates/runtime/tests/snapshots/fn_call_kw__kw_missing.snap
---
source: crates/runtime/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a):
  print a

f()


# Result (error):
In test_func at 0..0
Error: mismatched keyword params: missing a


# Stdout:

