crates/runtime/tests/snapshots/fn_call_kw__kw_missing_with_kwargs.snap
---
source: crates/vm/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f()


# Result (error):
in [[main]]
[31merror[0m in code: mismatched keyword params: missing a, b


# Stdout:

