crates/runtime/tests/snapshots/fn_call_kw__kw_unrecognized_and_missing.snap
---
source: crates/runtime/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f(c=10)


# Result (error):
In test_func at 0..0
Error: mismatched keyword params: missing a, b


# Stdout:

