crates/runtime/tests/snapshots/fn_call_kw__kw_with_kwargs.snap
---
source: crates/runtime/tests/fn_call_kw.rs
expression: snapshot
---
# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f(a=1, b=2, c=3)
f(c=3, b=2, a=1)


# Result (success):
none

# Stdout:
1 2 {"c": 3}
1 2 {"c": 3}

